syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;

option go_package = "./ecommerce";

service ProductInfo {
    rpc addProduct(Product) returns (ProductID){};
    rpc getProduct(ProductID) returns (Product){};
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}

service OrderManagement {
    rpc getOrder(google.protobuf.StringValue) returns (Order);
}

message Order { 
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}
